feat: set up MVP frontend functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      // Enable mock API in development preview
+      window.BUGSPOT_USE_MOCK = true;
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
